lab1/ding.output
语法

    0 $accept: Program $end

    1 Program: ProgramFileds MainFunction
    2        | ProgramFileds

    3 ProgramFileds: ProgramFiled
    4              | ProgramFileds ProgramFiled

    5 ProgramFiled: VariableDef
    6             | FunctionDef
    7             | ClassDef

    8 VariableDef: Variable SPSEMICOLON
    9            | Variable CommaIdentifiers SPSEMICOLON
   10            | error SPSEMICOLON

   11 CommaIdentifiers: SPCOMMA IDENTIFIER
   12                 | CommaIdentifiers SPCOMMA IDENTIFIER

   13 Variable: Type IDENTIFIER
   14         | Variable SPLEFTBRACKET IDENTIFIER SPRIGHTBRACKET
   15         | Variable SPLEFTBRACKET CONSTANTINT SPRIGHTBRACKET

   16 Type: TYPEINTEGER
   17     | TYPEFLOAT
   18     | TYPEBOOL
   19     | TYPESTRING
   20     | TYPEVOID
   21     | KEYCLASS IDENTIFIER
   22     | Type SPLEFTBRACKET SPRIGHTBRACKET

   23 Variables: Variable
   24          | Variables SPCOMMA Variable

   25 Formals: %empty
   26        | Variables

   27 MainFunction: KEYSTATIC TYPEVOID KEYMAIN SPLEFTPRNT SPRIGHTPRNT StmtBlock

   28 FunctionDef: Type IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock
   29            | KEYSTATIC Type IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

   30 ClassDef: KEYCLASS IDENTIFIER SPLEFTBRACE PriviligeFields SPRIGHTBRACE
   31         | KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE PriviligeFields SPRIGHTBRACE
   32         | error SPRIGHTBRACE

   33 PriviligeFields: PriviligeField
   34                | PriviligeFields PriviligeField

   35 PriviligeField: PublicDeclaration Fields
   36               | ProtectedDeclaration Fields
   37               | PrivateDeclaration Fields

   38 PublicDeclaration: KEYPUBLIC SPCOLON

   39 ProtectedDeclaration: KEYPROTECTED SPCOLON

   40 PrivateDeclaration: KEYPRIVATE SPCOLON

   41 Fields: %empty
   42       | Field Fields

   43 Field: VariableDef
   44      | FunctionDef

   45 StmtBlock: SPLEFTBRACE Stmts SPRIGHTBRACE
   46          | error SPRIGHTBRACE

   47 Stmts: %empty
   48      | Stmt Stmts

   49 Stmt: VariableDef
   50     | SimpleStmt SPSEMICOLON
   51     | IfStmt
   52     | WhileStmt
   53     | ForStmt
   54     | BreakStmt SPSEMICOLON
   55     | ContinueStmt SPSEMICOLON
   56     | ReturnStmt SPSEMICOLON
   57     | PrintStmt SPSEMICOLON
   58     | StmtBlock

   59 SimpleStmt: %empty
   60           | LValue OPASSIGN Expr
   61           | SelfLvalue
   62           | Call

   63 LValue: IDENTIFIER
   64       | Expr SPDOT IDENTIFIER
   65       | Expr SPLEFTBRACKET Expr SPRIGHTBRACKET
   66       | SelfLvalue

   67 SelfLvalue: LValue OPSELFADD
   68           | LValue OPSELFMINUS

   69 Call: IDENTIFIER SPLEFTPRNT Actuals SPRIGHTPRNT
   70     | Expr SPDOT IDENTIFIER SPLEFTPRNT Actuals SPRIGHTPRNT

   71 Actuals: %empty
   72        | Exprs

   73 Exprs: Expr
   74      | Exprs SPCOMMA Expr

   75 ForStmt: KEYFOR SPLEFTPRNT SimpleStmt SPSEMICOLON BoolExpr SPSEMICOLON SimpleStmt SPRIGHTPRNT Stmt
   76        | KEYFOR SPLEFTPRNT Variable SPCOLON IDENTIFIER SPRIGHTPRNT Stmt

   77 WhileStmt: KEYWHILE SPLEFTPRNT BoolExpr SPRIGHTPRNT Stmt

   78 IfStmt: KEYIF SPLEFTPRNT BoolExpr SPRIGHTPRNT Stmt
   79       | KEYIF SPLEFTPRNT BoolExpr SPRIGHTPRNT Stmt KEYELSE Stmt

   80 ReturnStmt: KEYRETURN
   81           | KEYRETURN Expr

   82 BreakStmt: KEYBREAK

   83 ContinueStmt: KEYCONTINUE

   84 PrintStmt: KEYPRINT SPLEFTPRNT Exprs SPRIGHTPRNT

   85 BoolExpr: Expr

   86 Expr: Constant
   87     | LValue
   88     | KEYTHIS
   89     | Call
   90     | SPLEFTPRNT Expr SPRIGHTPRNT
   91     | Expr OPPLUS Expr
   92     | Expr OPMINUS Expr
   93     | Expr OPMULTIPLY Expr
   94     | Expr OPDIVIDE Expr
   95     | OPMINUS Expr
   96     | Expr OPLIGHT Expr
   97     | Expr OPLIGHTEQ Expr
   98     | Expr OPGREAT Expr
   99     | Expr OPGREATEQ Expr
  100     | Expr OPEQUAL Expr
  101     | Expr OPNOTEQUAL Expr
  102     | Expr OPAND Expr
  103     | Expr OPOR Expr
  104     | OPNOT Expr
  105     | KEYREADINTEGER SPLEFTPRNT SPRIGHTPRNT
  106     | KEYREADLINE SPLEFTPRNT SPRIGHTPRNT
  107     | KEYREADFLOAT SPLEFTPRNT SPRIGHTPRNT
  108     | KEYNEW IDENTIFIER SPLEFTPRNT SPRIGHTPRNT
  109     | KEYNEW Type SPLEFTBRACKET Expr SPRIGHTBRACKET
  110     | KEYINSTANCEOF SPLEFTPRNT Expr SPCOMMA IDENTIFIER SPRIGHTPRNT
  111     | SPLEFTPRNT KEYCLASS IDENTIFIER SPRIGHTPRNT Expr

  112 Constant: CONSTANTINT
  113         | CONSTANTFLOAT
  114         | CONSTANTBOOL
  115         | CONSTANTSTRING
  116         | CONSTANTNULL


Terminals, with rules where they appear

$end (0) 0
error (256) 10 32 46
SPSEMICOLON (258) 8 9 10 50 54 55 56 57 75
SPCOLON (259) 38 39 40 76
SPCOMMA (260) 11 12 24 74 110
SPDOT (261) 64 70
SPLEFTBRACE (262) 30 31 45
SPRIGHTBRACE (263) 30 31 32 45 46
SPLEFTPRNT (264) 27 28 29 69 70 75 76 77 78 79 84 90 105 106 107 108
    110 111
SPRIGHTPRNT (265) 27 28 29 69 70 75 76 77 78 79 84 90 105 106 107 108
    110 111
SPLEFTBRACKET (266) 14 15 22 65 109
SPRIGHTBRACKET (267) 14 15 22 65 109
OPPLUS (268) 91
OPMINUS (269) 92 95
OPMULTIPLY (270) 93
OPDIVIDE (271) 94
OPASSIGN (272) 60
OPAND (273) 102
OPOR (274) 103
OPNOT (275) 104
OPEQUAL (276) 100
OPNOTEQUAL (277) 101
OPGREAT (278) 98
OPLIGHT (279) 96
OPGREATEQ (280) 99
OPLIGHTEQ (281) 97
OPSELFADD (282) 67
OPSELFMINUS (283) 68
TYPEVOID (284) 20 27
TYPEINTEGER (285) 16
TYPEFLOAT (286) 17
TYPEBOOL (287) 18
TYPESTRING (288) 19
KEYPUBLIC (289) 38
KEYPRIVATE (290) 40
KEYPROTECTED (291) 39
KEYMAIN (292) 27
KEYCLASS (293) 21 30 31 111
KEYNEW (294) 108 109
KEYEXTENDS (295) 31
KEYTHIS (296) 88
KEYINSTANCEOF (297) 110
KEYIF (298) 78 79
KEYELSE (299) 79
KEYFOR (300) 75 76
KEYWHILE (301) 77
KEYBREAK (302) 82
KEYCONTINUE (303) 83
KEYRETURN (304) 80 81
KEYSTATIC (305) 27 29
KEYPRINT (306) 84
KEYREADINTEGER (307) 105
KEYREADLINE (308) 106
KEYREADFLOAT (309) 107
CONSTANTNULL (310) 116
CONSTANTBOOL (311) 114
CONSTANTINT (312) 15 112
CONSTANTFLOAT (313) 113
CONSTANTSTRING (314) 115
IDENTIFIER (315) 11 12 13 14 21 28 29 30 31 63 64 69 70 76 108 110
    111
LOWER_THAN_ELSE (316)


Nonterminals, with rules where they appear

$accept (62)
    左： 0
Program (63)
    左： 1 2, 右： 0
ProgramFileds (64)
    左： 3 4, 右： 1 2 4
ProgramFiled (65)
    左： 5 6 7, 右： 3 4
VariableDef (66)
    左： 8 9 10, 右： 5 43 49
CommaIdentifiers (67)
    左： 11 12, 右： 9 12
Variable (68)
    左： 13 14 15, 右： 8 9 14 15 23 24 76
Type (69)
    左： 16 17 18 19 20 21 22, 右： 13 22 28 29 109
Variables (70)
    左： 23 24, 右： 24 26
Formals (71)
    左： 25 26, 右： 28 29
MainFunction (72)
    左： 27, 右： 1
FunctionDef (73)
    左： 28 29, 右： 6 44
ClassDef (74)
    左： 30 31 32, 右： 7
PriviligeFields (75)
    左： 33 34, 右： 30 31 34
PriviligeField (76)
    左： 35 36 37, 右： 33 34
PublicDeclaration (77)
    左： 38, 右： 35
ProtectedDeclaration (78)
    左： 39, 右： 36
PrivateDeclaration (79)
    左： 40, 右： 37
Fields (80)
    左： 41 42, 右： 35 36 37 42
Field (81)
    左： 43 44, 右： 42
StmtBlock (82)
    左： 45 46, 右： 27 28 29 58
Stmts (83)
    左： 47 48, 右： 45 48
Stmt (84)
    左： 49 50 51 52 53 54 55 56 57 58, 右： 48 75 76 77 78 79
SimpleStmt (85)
    左： 59 60 61 62, 右： 50 75
LValue (86)
    左： 63 64 65 66, 右： 60 67 68 87
SelfLvalue (87)
    左： 67 68, 右： 61 66
Call (88)
    左： 69 70, 右： 62 89
Actuals (89)
    左： 71 72, 右： 69 70
Exprs (90)
    左： 73 74, 右： 72 74 84
ForStmt (91)
    左： 75 76, 右： 53
WhileStmt (92)
    左： 77, 右： 52
IfStmt (93)
    左： 78 79, 右： 51
ReturnStmt (94)
    左： 80 81, 右： 56
BreakStmt (95)
    左： 82, 右： 54
ContinueStmt (96)
    左： 83, 右： 55
PrintStmt (97)
    左： 84, 右： 57
BoolExpr (98)
    左： 85, 右： 75 77 78 79
Expr (99)
    左： 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105 106 107 108 109 110 111, 右： 60 64 65 70 73 74 81 85
    90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 109 110 111
Constant (100)
    左： 112 113 114 115 116, 右： 86


State 0

    0 $accept: . Program $end

    error        shift, and go to state 1
    TYPEVOID     shift, and go to state 2
    TYPEINTEGER  shift, and go to state 3
    TYPEFLOAT    shift, and go to state 4
    TYPEBOOL     shift, and go to state 5
    TYPESTRING   shift, and go to state 6
    KEYCLASS     shift, and go to state 7
    KEYSTATIC    shift, and go to state 8

    Program        转到状态 9
    ProgramFileds  转到状态 10
    ProgramFiled   转到状态 11
    VariableDef    转到状态 12
    Variable       转到状态 13
    Type           转到状态 14
    FunctionDef    转到状态 15
    ClassDef       转到状态 16


State 1

   10 VariableDef: error . SPSEMICOLON
   32 ClassDef: error . SPRIGHTBRACE

    SPSEMICOLON   shift, and go to state 17
    SPRIGHTBRACE  shift, and go to state 18


State 2

   20 Type: TYPEVOID .

    $default  reduce using rule 20 (Type)


State 3

   16 Type: TYPEINTEGER .

    $default  reduce using rule 16 (Type)


State 4

   17 Type: TYPEFLOAT .

    $default  reduce using rule 17 (Type)


State 5

   18 Type: TYPEBOOL .

    $default  reduce using rule 18 (Type)


State 6

   19 Type: TYPESTRING .

    $default  reduce using rule 19 (Type)


State 7

   21 Type: KEYCLASS . IDENTIFIER
   30 ClassDef: KEYCLASS . IDENTIFIER SPLEFTBRACE PriviligeFields SPRIGHTBRACE
   31         | KEYCLASS . IDENTIFIER KEYEXTENDS IDENTIFIER SPLEFTBRACE PriviligeFields SPRIGHTBRACE

    IDENTIFIER  shift, and go to state 19


State 8

   29 FunctionDef: KEYSTATIC . Type IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

    TYPEVOID     shift, and go to state 2
    TYPEINTEGER  shift, and go to state 3
    TYPEFLOAT    shift, and go to state 4
    TYPEBOOL     shift, and go to state 5
    TYPESTRING   shift, and go to state 6
    KEYCLASS     shift, and go to state 20

    Type  转到状态 21


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: ProgramFileds . MainFunction
    2        | ProgramFileds .
    4 ProgramFileds: ProgramFileds . ProgramFiled

    error        shift, and go to state 1
    TYPEVOID     shift, and go to state 2
    TYPEINTEGER  shift, and go to state 3
    TYPEFLOAT    shift, and go to state 4
    TYPEBOOL     shift, and go to state 5
    TYPESTRING   shift, and go to state 6
    KEYCLASS     shift, and go to state 7
    KEYSTATIC    shift, and go to state 23

    $end  reduce using rule 2 (Program)

    ProgramFiled  转到状态 24
    VariableDef   转到状态 12
    Variable      转到状态 13
    Type          转到状态 14
    MainFunction  转到状态 25
    FunctionDef   转到状态 15
    ClassDef      转到状态 16


State 11

    3 ProgramFileds: ProgramFiled .

    $default  reduce using rule 3 (ProgramFileds)


State 12

    5 ProgramFiled: VariableDef .

    $default  reduce using rule 5 (ProgramFiled)


State 13

    8 VariableDef: Variable . SPSEMICOLON
    9            | Variable . CommaIdentifiers SPSEMICOLON
   14 Variable: Variable . SPLEFTBRACKET IDENTIFIER SPRIGHTBRACKET
   15         | Variable . SPLEFTBRACKET CONSTANTINT SPRIGHTBRACKET

    SPSEMICOLON    shift, and go to state 26
    SPCOMMA        shift, and go to state 27
    SPLEFTBRACKET  shift, and go to state 28

    CommaIdentifiers  转到状态 29


State 14

   13 Variable: Type . IDENTIFIER
   22 Type: Type . SPLEFTBRACKET SPRIGHTBRACKET
   28 FunctionDef: Type . IDENTIFIER SPLEFTPRNT Formals SPRIGHTPRNT StmtBlock

    SPLEFTBRACKET  shift, and go to state 30
    IDENTIFIER     shift, and go to state 31


State 15

    6 ProgramFiled: FunctionDef .

    $default  reduce using rule 6 (ProgramFiled)


State 16

    7 ProgramFiled: ClassDef .

    $default  reduce using rule 7 (ProgramFiled)


State 17

   10 VariableDef: error SPSEMICOLON .

    $default  reduce using rule 10 (VariableDef)


State 18

   32 ClassDef: error SPRIGHTBRACE .

    $default  reduce using rule 32 (ClassDef)


State 19
